--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav class="fixed w-full z-50 bg-white/80 backdrop-blur-md border-b border-gray-100">
         <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
-            <span class="text-xl font-bold tracking-tighter text-indigo-600">MJ.</span>
+            <span class="text-xl font-bold tracking-tighter text-indigo-600">Mubeen Javaid</span>
             <div class="space-x-8 hidden md:block">
                 <a href="#about" class="hover:text-indigo-600 transition">About</a>
                 <a href="#projects" class="hover:text-indigo-600 transition">Projects</a>
