--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
             <span class="text-xl font-bold tracking-tighter text-indigo-600">Mubeen Javaid</span>
             <div class="space-x-8 hidden md:block">
-                <a href="#about" class="hover:text-indigo-600 transition">About</a>
+                <a href="#about" class="hover:text-indigo-600 transition">About Mubeen</a>
                 <a href="#projects" class="hover:text-indigo-600 transition">Projects</a>
                 <a href="#contact" class="hover:text-indigo-600 transition">Contact</a>
             </div>
